--- a/pom.xml
+++ b/pom.xml
@@ -11,7 +11,7 @@
     <packaging>jar</packaging>
     <groupId>org.webjars</groupId>
     <artifactId>ubuntu-fontface</artifactId>
-    <version>0.1.3</version>
+    <version>0.1.4</version>
     <name>Ubuntu Font Family</name>
     <description>WebJar for ubuntu-fontface</description>
     <url>http://webjars.org</url>
@@ -65,17 +65,13 @@
                         <goals><goal>run</goal></goals>
                         <configuration>
                             <target>
-                                <echo message="download archive" />
-                                <get src="${upstream.url}" dest="${project.build.directory}/${project.artifactId}.zip" />
-                                <echo message="unzip archive" />
-                                <unzip src="${project.build.directory}/${project.artifactId}.zip" dest="${project.build.directory}" />
                                 <echo message="moving resources" />
-                                <move todir="${destDir}">
-                                    <fileset dir="${project.build.directory}/ubuntu-fontface-${upstream.version}/" includes="ubuntu*, *-LICENSE" />
-                                </move>
-                                <move todir="${destDir}/fonts">
-                                    <fileset dir="${project.build.directory}/ubuntu-fontface-${upstream.version}/fonts" />
-                                </move>
+                                <copy todir="${destDir}">
+                                    <fileset dir="${project.basedir}" includes="ubuntu*, *-LICENSE" />
+                                </copy>
+                                <copy todir="${destDir}/fonts">
+                                    <fileset dir="${project.basedir}/fonts" />
+                                </copy>
                             </target>
                         </configuration>
                     </execution>
